success to fix overflow-x problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,14 +3,10 @@
     box-sizing: border-box;
     font-family: 'Noto Sans TC', sans-serif;
 }
-html {
-    width:100%;
-    overflow-x: hidden;
-}
 body {
-    width:100%;
+    position: fixed;
+    width:100%;height:100%;
     margin: 0px;
-    overflow-x: hidden;
 }
 header {
     display: flex;
